@@ -2,6 +2,10 @@ Revision history for Path-Class-Rule
 
 {{$NEXT}}
 
+  [DOCUMENTATION]
+
+    - Added PERFORMANCE section with caveats
+
 0.017     2013-01-23 14:44:04 America/New_York
 
   [CHANGES]
